# asm584

./: .gitignore  .hlint.yaml  CHANGELOG.md  README-ru.md  README.md  asm584.cabal  hie.yaml  stack.yaml
app/: Main.hs
src/: Asm584.hs
src/Asm584/: CodeGen.hs  CommandLine.hs  InstructionSet.hs  Lexer.hs  Parser.hs  Types.hs
test/: CodeGenTest.hs  LexerTest.hs  Main.hs  ParserTest.hs
