cabal-version:      3.0
name:               asm584
version:            0.1.0.0
synopsis:           A simple assembler for K584VM1 microprocessor
-- description:
homepage:           https://github.com/kodemeister/asm584
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Arthur Kasimov
maintainer:         kodemeister@outlook.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Asm584

    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1

    hs-source-dirs:   src
    default-language: Haskell2010

executable asm584
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        asm584,
        base ^>=4.17.2.1

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite asm584-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        asm584,
        base ^>=4.17.2.1
