cabal-version:      3.0
name:               asm584
version:            0.1.0.0
synopsis:           A simple assembler for K584VM1 microprocessor
-- description:
homepage:           https://github.com/kodemeister/asm584
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Arthur Kasimov
maintainer:         kodemeister@outlook.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md

-- extra-source-files:

common common-options
    ghc-options: -Wall
    build-depends:
        base >=4.14.3.0 && <5.0,
        binary ^>=0.8.8.0,
        bytestring >=0.10.12.0 && <0.13,
        containers >=0.6.5.1 && <0.9,
        encoding ^>=0.10,
        filepath >=1.4.2.1 && <1.6,
        leb128-binary ^>=0.1.3,
        megaparsec >=9.2.1 && <9.8,
        optparse-applicative ^>=0.18.1.0,
        parser-combinators ^>=1.3.0,
        string-interpolate ^>=0.3.4.0,
        text >=1.2.4.1 && <2.2

    default-language: Haskell2010
    default-extensions:
        BinaryLiterals
        FlexibleContexts
        NamedFieldPuns
        NumericUnderscores
        OverloadedStrings
        QuasiQuotes
        RecordWildCards

library
    import:           common-options
    exposed-modules:
        Asm584
        Asm584.CodeGen
        Asm584.CommandLine
        Asm584.InstructionSet
        Asm584.Lexer
        Asm584.Parser
        Asm584.Types

    other-modules:    Paths_asm584
    autogen-modules:  Paths_asm584
    -- other-extensions:
    -- build-depends:
    hs-source-dirs:   src

executable asm584
    import:           common-options
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        asm584

    hs-source-dirs:   app

test-suite asm584-test
    import:           common-options
    other-modules:
        CodeGenTest
        LexerTest
        ParserTest

    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        asm584,
        hspec ^>=2.11.12,
        hspec-megaparsec ^>=2.2.0,
        tasty ^>=1.5.3,
        tasty-hspec ^>=1.2.0.4

    build-tool-depends:
        tasty-discover:tasty-discover ^>=5.0.1
