cabal-version:      3.0
name:               asm584
version:            0.2.0.0
synopsis:           A simple assembler for K584VM1 microprocessor
description:
    asm584 translates programs written in K584VM1 assembly language into binary
    .x584 files. The resulting files can be opened in X584 simulator for further
    editing and debugging.

homepage:           https://github.com/kodemeister/asm584
bug-reports:        https://github.com/kodemeister/asm584/issues
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Arthur Kasimov
maintainer:         kodemeister@outlook.com
copyright:          (C) 2025 Arthur Kasimov
category:           Development
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md

tested-with:
    GHC == 8.10.7,
    GHC == 9.4.8

source-repository head
    type:             git
    location:         https://github.com/kodemeister/asm584

common common-options
    ghc-options: -Wall
    build-depends:
        base >= 4.14.3.0 && < 5.0,
        binary ^>= 0.8.8.0,
        bytestring >= 0.10.12.0 && < 0.13,
        code-page ^>= 0.2.1,
        containers >= 0.6.5.1 && < 0.9,
        encoding ^>= 0.10.1,
        filepath >= 1.4.2.1 && < 1.6,
        leb128-binary == 0.1.1,
        megaparsec >= 9.0.1 && < 9.8,
        optparse-applicative >= 0.16.1.0 && < 0.19,
        parser-combinators >= 1.2.1 && < 1.4,
        string-interpolate ^>= 0.3.1.1,
        text >= 1.2.4.1 && < 2.2

    default-language: Haskell2010
    default-extensions:
        BinaryLiterals
        FlexibleContexts
        NamedFieldPuns
        NumericUnderscores
        OverloadedStrings
        QuasiQuotes
        RecordWildCards

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        Asm584
        Asm584.CodeGen
        Asm584.CommandLine
        Asm584.InstructionSet
        Asm584.Lexer
        Asm584.Parser
        Asm584.Types

    other-modules:    Paths_asm584
    autogen-modules:  Paths_asm584

executable asm584
    import:           common-options
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        asm584

test-suite asm584-test
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        CodeGenTest
        LexerTest
        ParserTest

    build-depends:
        asm584,
        hspec >= 2.7.10 && < 2.12,
        hspec-megaparsec ^>= 2.2.0,
        tasty >= 1.4.2.1 && < 1.6,
        tasty-hspec >= 1.1.6 && < 1.3

    build-tool-depends:
        tasty-discover:tasty-discover >= 4.2.2 && < 5.1
